[P90][Camera]Camera driver porting
Change-Id: I90ef38fd531c5def5063a5070680777043a45a71
Signed-off-by: zhaojin <jin.zhao@archermind.com>
(cherry picked from commit 36a6d16d0778be7bffe7f4090f29d7e63fd6f1ef)

--- a/arch/arm64/boot/dts/qcom/pmi632.dtsi
+++ b/arch/arm64/boot/dts/qcom/pmi632.dtsi
@@ -670,10 +670,12 @@
 			pmi632_flash0: qcom,flash_0 {
 				label = "flash";
 				qcom,led-name = "led:flash_0";
-				qcom,max-current = <1500>;
+				qcom,max-current = <80>;
 				qcom,default-led-trigger = "flash0_trigger";
 				qcom,id = <0>;
-				qcom,current-ma = <1000>;
+/*Huaqin add for ZQL1830-1319 by likai at 2018/10/10 start*/
+				qcom,current-ma = <80>;
+/*Huaqin add for ZQL1830-1319 by likai at 2018/10/10 end*/
 				qcom,duration-ms = <1280>;
 				qcom,ires-ua = <12500>;
 				qcom,hdrm-voltage-mv = <400>;
@@ -683,7 +685,7 @@
 			pmi632_flash1: qcom,flash_1 {
 				label = "flash";
 				qcom,led-name = "led:flash_1";
-				qcom,max-current = <1500>;
+				qcom,max-current = <1000>;
 				qcom,default-led-trigger = "flash1_trigger";
 				qcom,id = <1>;
 				qcom,current-ma = <1000>;
@@ -696,10 +698,14 @@
 			pmi632_torch0: qcom,torch_0 {
 				label = "torch";
 				qcom,led-name = "led:torch_0";
-				qcom,max-current = <500>;
+/*Huaqin add for ZQL1830-1319 by likai at 2018/10/10 start*/
+				qcom,max-current = <80>;
+/*Huaqin add for ZQL1830-1319 by likai at 2018/10/10 end*/
 				qcom,default-led-trigger = "torch0_trigger";
 				qcom,id = <0>;
-				qcom,current-ma = <300>;
+/*Huaqin add for ZQL1830-1319 by likai at 2018/10/10 start*/
+				qcom,current-ma = <80>;
+/*Huaqin add for ZQL1830-1319 by likai at 2018/10/10 end*/
 				qcom,ires-ua = <12500>;
 				qcom,hdrm-voltage-mv = <400>;
 				qcom,hdrm-vol-hi-lo-win-mv = <100>;
@@ -708,10 +714,10 @@
 			pmi632_torch1: qcom,torch_1 {
 				label = "torch";
 				qcom,led-name = "led:torch_1";
-				qcom,max-current = <500>;
+				qcom,max-current = <200>;
 				qcom,default-led-trigger = "torch1_trigger";
 				qcom,id = <1>;
-				qcom,current-ma = <300>;
+				qcom,current-ma = <100>;
 				qcom,ires-ua = <12500>;
 				qcom,hdrm-voltage-mv = <400>;
 				qcom,hdrm-vol-hi-lo-win-mv = <100>;
@@ -722,13 +728,15 @@
 				qcom,led-name = "led:switch_0";
 				qcom,led-mask = <3>;
 				qcom,default-led-trigger = "switch0_trigger";
+				//qcom,id = <0>;
 			};
 
 			pmi632_switch1: qcom,led_switch_1 {
 				label = "switch";
 				qcom,led-name = "led:switch_1";
-				qcom,led-mask = <2>;
+				qcom,led-mask = <3>;//2
 				qcom,default-led-trigger = "switch1_trigger";
+				//qcom,id = <1>;
 			};
 
 		};
@@ -736,13 +744,24 @@
 	};
 };
 &soc {
-	led_flash0: qcom,camera-flash {
+	led_flash0: qcom,camera-flash@0 {
 		cell-index = <0>;
 		compatible = "qcom,camera-flash";
 		qcom,flash-type = <1>;
-		qcom,flash-source = <&pmi632_flash0 &pmi632_flash1>;
-		qcom,torch-source = <&pmi632_torch0 &pmi632_torch1>;
+		qcom,flash-source = <&pmi632_flash1>;
+		qcom,torch-source = <&pmi632_torch1>;
 		qcom,switch-source = <&pmi632_switch0>;
+		status = "ok";
+	};
+
+	led_flash1: qcom,camera-flash@1 {
+		cell-index = <1>;
+		compatible = "qcom,camera-subflash";
+		qcom,flash-type = <1>;
+		qcom,flash-source = <&pmi632_flash0>;
+		qcom,torch-source = <&pmi632_torch0>;
+		qcom,switch-source = <&pmi632_switch1>;
+		status = "ok";
 	};
 };
 
