[BSP][Audio]Audio driver porting
Change-Id: Ib379b95392d01d0b01e95f0aac5148dc97e76a6c
Signed-off-by: zhaojin <jin.zhao@archermind.com>

--- a/arch/arm64/boot/dts/qcom/sdm632.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdm632.dtsi
@@ -1156,6 +1156,18 @@
 		};
 	};
 };
+
+/* Huaqin add for zhengwu start */
+&i2c_5 {
+	status = "okay";
+	tfa98xx@34 {
+		compatible = "nxp,tfa98xx";
+		reg = <0x34>;
+		reset-gpio =<&tlmm 94 0>;
+	};
+};
+/* Huaqin add for zhengwu end */
+
 /* huaqin add for bring up ili9881h by liufurong at 20180719 start */
 &i2c_3 {
 	status = "ok";
