--- a/arch/arm64/boot/dts/qcom/msm8953-regulator.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8953-regulator.dtsi
@@ -211,6 +211,9 @@
 			regulator-min-microvolt = <2900000>;
 			regulator-max-microvolt = <2900000>;
 			qcom,init-voltage = <2900000>;
+			/*Huaqin modify for PA22A I2C read error by yangliguo at 2018/08/03 start */
+			regulator-always-on;
+			/*Huaqin modify for PA22A I2C read error by yangliguo at 2018/08/03 end */
 			status = "okay";
 		};
 	};
@@ -231,6 +234,9 @@
 			regulator-min-microvolt = <2850000>;
 			regulator-max-microvolt = <2850000>;
 			qcom,init-voltage = <2850000>;
+			/* Huaqin modify for ZQL1830-395 by zhaojunhai1 at 2018/7/17 start */
+			regulator-always-on;
+			/* Huaqin modify for ZQL1830-395 by zhaojunhai1 at 2018/7/17 start */
 			status = "okay";
 		};
 	};
