--- a/arch/arm64/boot/dts/qcom/pmi632.dtsi
+++ b/arch/arm64/boot/dts/qcom/pmi632.dtsi
@@ -140,6 +140,18 @@
 				qcom,fast-avg-setup = <0>;
 				qcom,cal-val = <0>;
 			};
+//huaqin added for ZQL1830-357 by tangqingyong adapter_id recognize at 20180808 start
+			chan@13 {
+				label = "CHG_ADC";
+				reg = <0x13>;
+				qcom,decimation = <2>;
+				qcom,pre-div-channel-scaling = <0>;
+				qcom,calibration-type = "absolute";
+				qcom,scale-function = <0>;
+				qcom,hw-settle-time = <2>;
+				qcom,fast-avg-setup = <0>;
+			};
+//huaqin added for ZQL1830-357 by tangqingyong adapter_id recognize at 20180808 end
 
 			chan@4a {
 				label = "bat_therm";
@@ -159,7 +171,9 @@
 				qcom,decimation = <2>;
 				qcom,pre-div-channel-scaling = <0>;
 				qcom,calibration-type = "ratiometric";
-				qcom,scale-function = <24>;
+			//huaqin add by tangqingyong for ZQL1830-412 NTC batt-therm config start
+				qcom,scale-function = <26>;
+			//huaqin add by tangqingyong for ZQL1830-412 NTC batt-therm config end
 				qcom,hw-settle-time = <0>;
 				qcom,fast-avg-setup = <0>;
 				qcom,cal-val = <0>;
@@ -218,8 +232,10 @@
 				reg = <0x52>;
 				qcom,decimation = <2>;
 				qcom,pre-div-channel-scaling = <0>;
-				qcom,calibration-type = "ratiometric";
-				qcom,scale-function = <2>;
+//Huaqin added by tangqingyong for ZQL1830-385 at 20180818 for USB alert start
+				qcom,calibration-type = "absolute";
+				qcom,scale-function = <0>;
+//Huaqin added by tangqingyong for ZQL1830-385 at 20180818 for USB alert end
 				qcom,hw-settle-time = <0>;
 				qcom,fast-avg-setup = <0>;
 				qcom,cal-val = <0>;
@@ -318,9 +334,20 @@
 			qcom,flash-disable-soc = <10>;
 			qcom,sw-jeita-enable;
 			qcom,step-charging-enable;
+//Huaqin added by tangqingyong for ZQL1830-385 at 20180818 for USB alert start
+			qcom,pm-gpio1-vadc = <&pmi632_vadc>;
+//Huaqin added by tangqingyong for ZQL1830-385 at 20180818 for USB alert end
+//huaqin added for ZQL1830-357 by tangqingyong adapter_id recognize at 20180808 start
+			qcom,pm-gpio3-vadc = <&pmi632_vadc>;
+			qcom,fcc-max-ua = <2200000>;
+			qcom,float-option = <1>;
+//huaqin added for ZQL1830-357 by tangqingyong adapter_id recognize at 20180808 end
+//huaqin added by tangqingyong for qcom base version update caused can not charge properly issue(case03607654) at 20180810 start
 			qcom,hw-die-temp-mitigation;
-			qcom,hw-connector-mitigation;
-			qcom,connector-internal-pull-kohm = <100>;
+//			qcom,hw-connector-mitigation;
+//			qcom,connector-internal-pull-kohm = <100>;
+//huaqin added by tangqingyong for qcom base version update caused can not charge properly issue(case03607654) at 20180810 end
+
 
 			qcom,thermal-mitigation
 				= <3000000 2500000 2000000 1500000
@@ -481,12 +508,16 @@
 			compatible = "qcom,qpnp-qg";
 			#address-cells = <1>;
 			#size-cells = <1>;
-
-			qcom,qg-iterm-ma = <100>;
+//huaqin added for ZQL1830-355 by tangqingyong at 20180828 start
+			qcom,qg-iterm-ma = <150>;
 			qcom,hold-soc-while-full;
 			qcom,linearize-soc;
 			qcom,qg-vadc = <&pmi632_vadc>;
 			qcom,pmic-revid = <&pmi632_revid>;
+			qcom,vbatt-empty-mv = <3000>;
+			qcom,vbatt-empty-cold-mv = <2800>;
+			qcom,vbatt-cutoff-mv = <3400>;
+//huaqin added for ZQL1830-355 by tangqingyong at 20180828 end
 
 			qcom,qgauge@4800 {
 				status = "okay";
