--- a/arch/arm64/configs/zql1830_defconfig
+++ b/arch/arm64/configs/zql1830_defconfig
@@ -49,9 +49,12 @@ CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
-CONFIG_MODULE_SIG=y
-CONFIG_MODULE_SIG_FORCE=y
-CONFIG_MODULE_SIG_SHA512=y
+#add tuexra file start
+#CONFIG_MODULE_SIG is not set
+#CONFIG_MODULE_SIG_FORCE is not set
+#CONFIG_MODULE_SIG_SHA512 is not set
+CONFIG_NLS_UTF8=y
+#add tuexra file end
 # CONFIG_BLK_DEV_BSG is not set
 CONFIG_PARTITION_ADVANCED=y
 # CONFIG_IOSCHED_DEADLINE is not set
