--- a/arch/arm64/boot/dts/qcom/msm8953.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8953.dtsi
@@ -68,7 +68,9 @@
 		other_ext_mem: other_ext_region@0 {
 			compatible = "removed-dma-pool";
 			no-map;
-			reg = <0x0 0x85b00000 0x0 0xd00000>;
+			/*Huaqin modify for TA mem by zhaojunhai1 at 2018/09/26 start*/
+			reg = <0x0 0x84a00000 0x0 0x1e00000>;
+			/*Huaqin modify for TA mem by zhaojunhai1 at 2018/09/26 end*/
 		};
 
 		modem_mem: modem_region@0 {
@@ -415,9 +417,11 @@
 		#thermal-sensor-cells = <1>;
 	};
 
-	qcom_seecom: qseecom@85b00000 {
+/*Huaqin modify for TA mem by zhaojunhai1 at 2018/09/26 start*/
+	qcom_seecom: qseecom@84a00000 {
 		compatible = "qcom,qseecom";
-		reg = <0x85b00000 0x800000>;
+		reg = <0x84a00000 0x1900000>;
+/*Huaqin modify for TA mem by zhaojunhai1 at 2018/09/26 end*/
 		reg-names = "secapp-region";
 		qcom,hlos-num-ce-hw-instances = <1>;
 		qcom,hlos-ce-hw-instance = <0>;
