[Kernel][exfat/ntfs] for cts test
Change-Id: I9f6a493d4ad1b10ec15cf19ebf3a6f42918984ae
Signed-off-by: fuzicheng <zicheng.fu@archermind.com>

--- a/arch/arm64/configs/zql1830_defconfig
+++ b/arch/arm64/configs/zql1830_defconfig
@@ -49,9 +49,10 @@ CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
-CONFIG_MODULE_SIG=y
-CONFIG_MODULE_SIG_FORCE=y
+CONFIG_MODULE_SIG=n
+CONFIG_MODULE_SIG_FORCE=n
 CONFIG_MODULE_SIG_SHA512=y
+CONFIG_CRYPTO_SHA512=y
 #add tuexra file start
 CONFIG_NLS_UTF8=y
 #add tuexra file end
