[BSP][POWER] fix bug 1289839 of chance no changing Description: fix bug 1289839 of chance no changing Include changes: NA
Change-Id: Ib19e9e33e12f7426a1e2a69f3c40c0a802275212

--- a/arch/arm64/boot/dts/qcom/sdm450-pmi632.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdm450-pmi632.dtsi
@@ -52,6 +52,9 @@
 &pmi632_vadc {
 	pinctrl-names = "default";
 	pinctrl-0 = <&quiet_therm_default &smb_therm_default>;
+//Huaqin added by tangqingyong for ZQL1830-385 at 20180818 for USB alert start
+	pinctrl-0 = <&quiet_therm_default &smb_therm_default &gpio1_adc_default>;
+//Huaqin added by tangqingyong for ZQL1830-385 at 20180818 for USB alert end
 };
 
 &pmi632_gpios {
@@ -68,6 +71,17 @@
 			bias-high-impedance;
 		};
 	};
+
+//Huaqin added by tangqingyong for ZQL1830-385 at 20180818 for USB alert start
+	gpio1_adc {
+		gpio1_adc_default: gpio1_adc_default {
+			pins = "gpio1";
+			function = "normal";
+			bias-disable;
+			bias-high-impedance;
+		};
+	};
+//Huaqin added by tangqingyong for ZQL1830-385 at 20180818 for USB alert end
 };
 
 &pmi632_qg {
