[camera]modify DVDD voltage according to O80
Change-Id: Id541269a8c53c3f96e1c018c0297c4db519ea8af
Signed-off-by: zhaojin <jin.zhao@archermind.com>

--- a/arch/arm64/boot/dts/qcom/msm8953-regulator.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8953-regulator.dtsi
@@ -315,7 +315,9 @@
 		status = "okay";
 		pm8953_l23: regulator-l23 {
 			regulator-min-microvolt = <975000>;
-			regulator-max-microvolt = <1225000>;
+			/*Huaqin add for HQ000003 by likai at 2018/12/05 start*/
+			regulator-max-microvolt = <1250000>;
+			/*Huaqin add for HQ000003 by likai at 2018/12/05 end*/
 			qcom,init-voltage = <975000>;
 			status = "okay";
 		};
