--- a/arch/arm64/boot/dts/qcom/msm8953-camera-sensor-qrd.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8953-camera-sensor-qrd.dtsi
@@ -68,7 +68,9 @@
 		cam_vana-supply = <&pm8953_l22>;
 		qcom,cam-vreg-name = "cam_vdig", "cam_vio", "cam_vana";
 		qcom,cam-vreg-min-voltage = <1200000 1800000 2850000>;
-		qcom,cam-vreg-max-voltage = <1200000 1800000 2850000>;
+		/*Huaqin add for HQ000003 by likai at 2018/12/05 start*/
+		qcom,cam-vreg-max-voltage = <1250000 1800000 2850000>;
+		/*Huaqin add for HQ000003 by likai at 2018/12/05 end*/
 		qcom,cam-vreg-op-mode = <105000 105000 80000>;
 		//qcom,gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
@@ -187,7 +189,9 @@
 		cam_vana-supply = <&pm8953_l22>;
 		qcom,cam-vreg-name = "cam_vdig", "cam_vio", "cam_vana";
 		qcom,cam-vreg-min-voltage = <1200000 1800000 2850000>;
-		qcom,cam-vreg-max-voltage = <1200000 1800000 2850000>;
+		/*Huaqin add for HQ000003 by likai at 2018/12/05 start*/
+		qcom,cam-vreg-max-voltage = <1250000 1800000 2850000>;
+		/*Huaqin add for HQ000003 by likai at 2018/12/05 end*/
 		qcom,cam-vreg-op-mode = <105000 105000 80000>;
 		//qcom,gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
